<resources>
    <string name="app_name">FinanceApp</string>

    <string name="text_registration">Регистрация</string>
    <string name="text_authorisation">Авторизация</string>
    <string name="text_sign_in">Войти</string>
    <string name="text_email">Email</string>
    <string name="text_password">Пароль</string>

    <string name="text_title_create_new_account">Создать новый аккаунт</string>
    <string name="text_title_sign_in">Мы рады Вашему возвращению!</string>

    <string name="text_btn_register">Зарегистрироваться</string>
    <string name="text_btn_sign_in">Войти</string>

    <string name="fill_in_all_fields">Заполните все поля</string>
    <string name="input_incorrect_login_data">Данные введены неверно</string>
    <string name="registration_user_already_exists">Такой пользователь уже существует</string>

    <!--  Нижнее меню  -->
    <string name="nav_main">Главная</string>
    <string name="nav_exchange_rates">Курсы валют ЦБ</string>
    <string name="nav_profile">Профиль</string>

    <string name="bill_amount_in_rubles">%.2f \u20BD</string>

    <string name="income_sum_in_rubles">%.2f \u20BD</string>
    <string name="consumption_sum_in_rubles">- %.2f \u20BD</string>

    <string name="add_bill_title">Добавить новый счет</string>
    <string name="add_name_bill">Название счета</string>
    <string name="add_initial_value">Начальное значение</string>

    <string name="add_record_title">Добавить новую запись</string>
    <string name="button_add_record_income">Доход</string>
    <string name="button_add_record_consumption">Расход</string>

    <string name="text_select_category">Выберите категорию</string>
    <string name="category">Категория</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="currency_rub">RUB</string>

    <string-array name="record_type">
        <item>@string/button_add_record_income</item>
        <item>@string/button_add_record_consumption</item>
    </string-array>

    <string name="categories">Категории</string>

    <string name="text_last_record">Последние записи</string>
    <string name="text_last_record_count">Последние 5 записей</string>

    <string name="text_name">Имя</string>
    <string name="text_surname">Фамилия</string>
    <string name="text_date_of_birth">Дата рождения</string>
    <string name="text_empty">Пусто</string>
    <string name="text_exit">Выйти</string>
    <string name="text_select_gender">Выберите пол</string>

    <string name="text_male">Мужской</string>
    <string name="text_female">Женский</string>

    <string-array name="select_gender_list">
        <item>Пусто</item>
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>

    <string name="apply_user_settings">Применить настройки пользователя</string>

    <string name="edit_user_data_success">Данные пользователя успешно обновлены</string>
    <string name="edit_user_data_error">Ошибка во время обновленя данных пользователя</string>

    <string name="user_name_on_main">%1$s,</string>
    <string name="here_displayed_your_bills">здесь отображены Ваши счета</string>

    <string name="text_info">Примечания</string>
</resources>