<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgUserProfile"
                android:layout_width="@dimen/profile_avatar_size"
                android:layout_height="@dimen/profile_avatar_size"
                android:layout_margin="@dimen/margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayoutEmail"
                android:src="@mipmap/ic_launcher_round" />

            <LinearLayout
                android:id="@+id/linearNameAndSurname"
                android:layout_width="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgUserProfile"
                android:layout_marginStart="@dimen/margin"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edNameProfile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_name"
                        android:inputType="text|textCapWords"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edSurnameProfile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_surname"
                        android:inputType="text|textCapWords"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutEmail"
                app:layout_constraintTop_toBottomOf="@+id/linearNameAndSurname"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edEmailProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_email"
                    android:inputType="textEmailAddress"
                    android:enabled="false"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/linearDateBirthAndGender"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail"
                app:layout_constraintStart_toStartOf="parent"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginRight="3dp"
                    android:layout_marginEnd="3dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:text="@string/text_date_of_birth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/btnSetDateOfBirthProfile"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:textColor="#000000"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_empty" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginLeft="3dp"
                    android:layout_marginStart="3dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:text="@string/text_select_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Spinner
                        android:id="@+id/spinnerGenderProfile"
                        android:layout_marginTop="7dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </Spinner>

                </LinearLayout>

            </LinearLayout>


            <Button
                android:id="@+id/btnExitProfile"
                app:layout_constraintTop_toBottomOf="@+id/linearDateBirthAndGender"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/text_exit" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</LinearLayout>