<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/imgLogoRegistration"
        android:layout_width="@dimen/logo_authorisation_width"
        android:layout_height="@dimen/logo_authorisation_height"
        android:layout_marginTop="@dimen/logo_authorisation_margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <ScrollView
        android:id="@+id/scrollViewSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/imgLogoRegistration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/logo_authorisation_area_margin"
            android:layout_marginStart="@dimen/logo_authorisation_area_margin"
            android:layout_marginTop="@dimen/logo_authorisation_area_margin"
            android:background="@drawable/trans_white_rectangle"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:text="@string/text_title_create_new_account"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <AutoCompleteTextView
                android:id="@+id/edEmailRegister"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_white"
                android:drawableStart="@drawable/ic_login_img"
                android:drawablePadding="5dp"
                android:hint="@string/text_email"
                android:paddingStart="10dp"
                android:textSize="14sp" />

            <AutoCompleteTextView
                android:id="@+id/edPasswordRegister"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/rounded_white"
                android:drawableStart="@drawable/ic_password_img"
                android:drawablePadding="5dp"
                android:hint="@string/text_password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/register_button"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:text="@string/text_btn_register"
                android:textColor="@color/white"
                android:textStyle="normal" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>