<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >



            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Spinner
                    android:id="@+id/spinnerTypeRecord"
                    style="@style/Widget.AppCompat.Light.Spinner.DropDown.ActionBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/record_type"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_marginTop="35dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvEditBillCurrency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/edSumNewRecord"
                    android:layout_alignBottom="@+id/edSumNewRecord"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="16dp"
                    android:text="@string/currency_rub"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edSumNewRecord"
                    android:textSize="40sp"
                    android:gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_toEndOf="@+id/tvSignEditBill"
                    android:layout_toStartOf="@+id/tvEditBillCurrency"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/tvSignEditBill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_alignBaseline="@+id/edSumNewRecord"
                    android:layout_alignBottom="@+id/edSumNewRecord"
                    android:layout_alignParentStart="true"
                    android:textColor="#000000"
                    android:text="@string/plus_sign"
                    android:textSize="40sp"
                    android:textStyle="bold" />

            </RelativeLayout>



            <LinearLayout
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <LinearLayout
                    android:id="@+id/selectCategory"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_marginStart="@dimen/margin"
                    android:layout_marginEnd="@dimen/margin"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvFirstParam"
                        android:text="@string/category"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:singleLine="true"/>

                    <TextView
                        android:id="@+id/tvFromBill"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        tools:text="Еда и напитки"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:textAllCaps="true"
                        android:textStyle="bold"/>

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>